<resources>
    <string name="app_name">Calculadora de Gorjeta</string>
    <string name="conta">Conta</string>
    <string name="explicacao1">Abaixo estão os valores típicos de gorjeta</string>
    <string name="percentual">Percentual</string>
    <string name="gorjeta">Gorjeta</string>
    <string name="explicacao2">Defina uma gorjeta de valor personalizado:</string>
    <string name="valorTotal">V. total</string>
</resources>